# ohl

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md  errors.ohl  example.ohl  expr.ohl  test.ohl
lang/: CHANGELOG.md  Cargo.toml  if-else.ohl  test.ll  test.ohl  test.ohl..ll
lang/src/: main.rs
lang/src/core/: logger.rs  mod.rs
lang/src/core/analyzer/: analyzer.rs  function.rs  mod.rs  scope.rs  variable.rs
lang/src/core/analyzing/: analyzer.rs  converter.rs  folder.rs  operator.rs  stree.rs  symbol_table.rs
lang/src/core/converter/: converter.rs  mod.rs  stree.rs
lang/src/core/ir/: codegen.rs  expression.rs  float.rs  function.rs  integer.rs  mod.rs  print.rs  statement.rs
lang/src/core/lexer/: lexer.rs  token.rs  token_type.rs
lang/src/core/methods/: mod.rs
lang/src/core/modules/: io.rs  math.rs  mod.rs  random.rs  system.rs  time.rs
lang/src/core/parser/: binding_power.rs  expression.rs  mod.rs  mtree.rs  parser.rs  statement.rs
lang/src/core/parsing/: binding_power.rs  expression.rs  mod.rs  mtree.rs  parser.rs  statement.rs
lang/src/core/running/: environment.rs  interpreter.rs  value.rs
lang/src/core/tokenizer/: lexer.rs  token.rs
lang/src/core/tokenizing/: lexer.rs  token.rs
lang/src/core/util/: error.rs  location.rs  logger.rs  mod.rs
lang/src/oo/: cli.rs
oo/: CHANGELOG.md  Cargo.toml  README.md  test.ohl  test2.ohl
src/: c.ohl  e.ohl  expr.ohl  main.rs  test.ohl
src/backend/: analyzer.rs  converter.rs  (+9 more)
vscode/: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  vsc-extension-quickstart.md
(+48 files in other folders)
