[package]
name = "ohl"
version = "1.1.0"
edition = "2024"

[[bin]]
name = "oo"
path = "src/main.rs"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
rand = "0.9.2"
inkwell = { version = "0.8.0", default-features = false, features = ["llvm21-1", "target-x86"] }

